--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -1,6 +1,8 @@
 .main {
   padding: 1rem;
   flex: 1;
+  max-width: 600px;
+  width: 100%;
 
   .buttonRow {
     display: flex;
